spec/Common/Error/BadResponseErrorSpec.php
<?php

namespace spec\OpenStack\Common\Error;

use GuzzleHttp\Message\Request;
use GuzzleHttp\Message\Response;
use GuzzleHttp\Stream\Stream;
use PhpSpec\ObjectBehavior;
use Prophecy\Argument;

class BadResponseErrorSpec extends ObjectBehavior
{

}
